# flow-vibration-analyzer

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASE_CHECKLIST.md  checklist.md  docker-compose.yml  main.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-web.txt  requirements.txt
.github/workflows/: ci.yml
assets/: README.md
config/: defaults.toml  example_config.json  strouhal_tables.toml
data/examples/: README.md  example_clean_sine.csv  example_noisy_sine.csv  example_risk_like_signal.csv  example_with_gaps.csv
data/synthetic/: clean_sine.csv  harmonics.csv  noisy_sine.csv  risk_scenario.csv  with_gaps.csv  with_outliers.csv
docker/: backend.Dockerfile
docs/: 00_project_overview.md  04_input_data_specification.md  05_output_data_specification.md  06_technology_stack.md  08_ui_ux_specification.md  10_data_models_and_schemas.md  13_testing_strategy.md  16_error_handling.md  18_security_and_data_privacy.md  20_roadmap.md  21_glossary.md  22_portfolio_case_study.md  DEVELOPMENT_CHECKLIST.md
docs/screenshots/: README.md
documentation/: 00_project_overview.md  01_technical_specification.md  02_architecture.md  03_scientific_methodology.md  07_user_scenarios.md  09_processing_pipeline.md  11_algorithms.md  12_validation_and_verification.md  14_performance_and_large_data.md  15_logging_and_audit.md  17_build_release_and_installer.md  19_code_style_and_contribution.md  20_roadmap.md  22_portfolio_case_study.md
documentation/screenshots/: README.md
iva/: __init__.py
iva/api/: __init__.py  dependencies.py  errors.py  limiter.py  main.py  security.py  settings.py  utils.py
iva/app/: __init__.py  analysis_runner.py  analysis_session.py  demo_service.py  profile_comparison_service.py  report_service.py  session_service.py  settings_manager.py  workflow_coordinator.py
iva/cli/: __init__.py  main.py
iva/ui/: __init__.py  analysis_worker.py  main_window.py  strings_ru.py
scripts/: build-all.ps1  build_installer.py  check_project.py  clean-logs.ps1  clean.ps1  clean_project.py  diagnose_project.py  docker.ps1  format_code.py  generate_synthetic_data.py  installer.iss  iva.ps1  iva.py  iva.spec  lint.ps1  quality.ps1  run.ps1  setup.ps1  strip_trailing_whitespace.py  test.ps1
scripts/lib/: IvaDevTools.psm1
tests/: conftest.py  test_project_foundation.py
tests/integration/: test_api_demo.py  test_api_file_upload_analysis.py  test_api_reports_sessions.py  test_app_cli_architecture.py  test_cli.py  test_cli_demo_mode.py  test_cli_localization.py  (+4 more)
(+207 files in other folders)
