[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-vibration-analyzer"
version = "1.0.0"
description = "Engineering desktop application for analysis of flow-induced vibrations in heat exchanger equipment."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
# Only the application package is distributable; without this setuptools'
# flat-layout auto-discovery sees iva/, out/, data/, assets/, config/ as
# candidate packages and refuses to build (breaks `pip install -e .`).
include = ["iva*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "performance: performance tests — deselect with '-m not performance'",
]

[tool.coverage.run]
source = ["iva"]
omit = ["iva/ui/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
